# motif

./: .gitignore  Makefile.am  README.md  acinclude.m4  autogen.sh  configure.ac
.github/workflows/: build.cygwin.yml  build.yml
bindings/: CDE  acorn  apollo  dec  dg_AViiON  doubleclick  hal  hitachi  hp  ibm  intergraph  intergraph17  megatek  motorola  ncr_at  ncr_vt  pc  sgi  siemens_9733  siemens_wx200  sni  sni_97801  sony  tek  xmbind.alias
bitmaps/: Makefile.am  xm_error  xm_hour16  xm_hour16m  xm_hour32  xm_hour32m  xm_information  xm_noenter16  xm_noenter16m  xm_noenter32  xm_noenter32m  xm_question  xm_warning  xm_working
clients/mwm/: Makefile.am  Mwm.ad  WmBitmap.h  WmCDInfo.c  WmCDInfo.h  WmCDecor.c  WmCDecor.h  WmCEvent.c  WmCEvent.h  WmCPlace.c  WmCPlace.h  WmCmd.c  WmCmd.h  WmColormap.c  WmColormap.h  WmDebug.h  WmError.c  WmError.h  WmEvent.c  WmEvent.h  WmFeedback.c  WmFeedback.h  WmFunction.c  WmFunction.h  WmGlobal.h  WmGraphics.c  WmGraphics.h  WmIBitmap.h  WmICCC.h  WmIDecor.c  WmIDecor.h  WmIPlace.c  WmIPlace.h  WmIconBox.c  WmIconBox.h  WmImage.c  WmImage.h  WmInitWs.c  WmInitWs.h  WmKeyFocus.c  (+35 more)
clients/uil/: Makefile.am  Uil.h  Uil.msg  Uil.pc.in  UilCmd.c  UilCmdDef.h  UilCompGl.h  UilDB.c  UilData.c  UilDef.h  UilDefI.h  UilDiagDef.h  UilDiags.c  UilIODef.h  UilKeyTab.c  UilLexAna.c  UilLexDef.h  UilLstLst.c  UilLstMac.c  UilMain.c  UilMess.h  UilMessTab.h  UilP2Out.c  UilP2Reslv.c  UilSarComp.c  UilSarDef.h  UilSarExp.c  UilSarInc.c  UilSarMod.c  UilSarObj.c  UilSarProc.c  UilSarVal.c  UilSemCSet.c  UilSemVal.c  UilSrcDef.h  UilSrcSrc.c  UilSymDef.h  UilSymGl.h  UilSymNam.c  UilSymStor.c  (+2 more)
clients/xmbind/: Makefile.am  xmbind.c
config/: Makefile.am
config/unicode/: Makefile.am  download.sh  genucd.c
config/util/: Makefile.am  checktree.c  chownxterm.c  lndir.c  lndir.man  makeg.man  makestrs.c  makestrs.man  mergelib.cpp  mkdirhier.man  xmkmf.man
demos/: Makefile.am
demos/GLw/: Makefile.am  paperplane.c
demos/lib/: Makefile.am
demos/lib/Exm/: CommandB.c  CommandB.h  CommandBP.h  ExmMrm.c  ExmMrm.h  ExmString.c  ExmString.h  ExmStringP.h  Grid.c  Grid.h  GridP.h  Makefile.am  MenuB.c  MenuB.h  MenuBP.h  Panner.c  Panner.h  PannerP.h  Simple.c  Simple.h  SimpleP.h  String.c  StringP.h  StringTrans.c  StringTrans.h  StringTransP.h  TabB.c  TabB.h  TabBP.h
demos/lib/Exm/wml/: Exm.wml  Makefile.am  wmldbcreate.c
demos/lib/Wsm/: Makefile.am  debug.c  disp.c  free.c  pack.c  recv.c  send.c  util.c  utm_send.c  utm_send.h  wsm_funcs.h  wsm_proto.h
demos/lib/Xmd/: AdjView.c  AdjView.h  Help.c  Help.h  HelpP.h  Makefile.am  Menus.c  Menus.h  Print.c  Print.h  PrintP.h  onHelp.c
demos/programs/: Makefile.am
demos/programs/ButtonBox/: Makefile.am  bboxdemo.c
demos/programs/ColorSel/: Makefile.am  colordemo.c  util-c.c
demos/programs/Column/: Makefile.am
demos/programs/Combo2/: Makefile.am
demos/programs/Ext18List/: Makefile.am  bxutil-c.c  callbacks-c.c  creation.c  ext18list.c  util-c.c
demos/programs/Ext18List/pixmaps/: Makefile.am
demos/programs/FontSel/: Makefile.am  callbacks-c.c  creation-c.c  fontsel.c
demos/programs/IconB/: Makefile.am  iconbuttondemo.c  misc.c
demos/programs/Outline/: Makefile.am  outline.c
demos/programs/Paned/: Makefile.am  creation-c.c  paned.c
demos/programs/TabStack/: Makefile.am  bxutils.c  callbacks.c
demos/programs/Tree/: Makefile.am  bxutil-c.c  tree.c
demos/programs/airport/: Makefile.am  README  XmdAirport.ad  airport.h  dragsource.c  dragsource.h  dropsite.c  dropsite.h  main.c  main.h
demos/programs/animate/: Makefile.am  XmdAnimate.ad  animate.c  animate.man  animate.uil  dog.uil  plane.uil  superman.uil  superman1.xbm  superman2.xbm  superman3.xbm  superman4.xbm  superman5.xbm  superman6.xbm  xmanimate.c  xmanimate.man  xmanimate.uil
demos/programs/drag_and_drop/: DNDDemo.c  DNDDemo.h  DNDDemo.man  DNDDraw.c  Makefile.am  simpledrop.c  simpledrop.man
demos/programs/draw/: Makefile.am  XmdDraw.ad  draw.c  draw.man
demos/programs/earth/: Makefile.am  earth.c  earth.man  terre.xbm
demos/programs/filemanager/: Makefile.am  XmdFilemanager.ad  actions.c  convert.c  filemanager.c  filemanager.h  filemanager.man  interface.c  readdir.c
demos/programs/fileview/: English.df  English.uil  Fileview.ad  French.df  French.uil  German.df  German.uil  Makefile.am  file.c  file.h  fileE.h  fileview.h  main.c  main.h  mainE.h  text.c  text.h  textE.h  xmfile
demos/programs/getsubres/: Makefile.am  getsubres.c  getsubres.man
demos/programs/hellomotif/: Makefile.am  hellomotif.c  hellomotif.uil
demos/unsupported/: Makefile.am
icons/: LICENSE  Makefile.am  xm_error.xpm  xm_information.xpm  xm_question.xpm  xm_warning.xpm  xm_working.xpm
include/Dt/: Editor.h  Help.h  HelpDialog.h  HelpQuickD.h  MenuButton.h  Print.h  Term.h  TermPrim.h
lib/: Makefile.am
lib/GLw/: GLwDrawA.c  GLwDrawA.h  GLwDrawAP.h  Makefile.am  glw.pc.in
lib/Mrm/: IDB.h  Makefile.am  Mrm.h  Mrm.msg  Mrm.pc.in  MrmAppl.h  MrmDecls.h  MrmIbuffer.c  MrmIentry.c  MrmIfile.c  MrmIheader.c  MrmIindex.c  MrmIindexw.c  MrmIrid.c  MrmIswap.c  MrmItop.c  MrmItopw.c  MrmMessages.c  MrmMsgI.h  MrmPublic.h  MrmWidget.h  Mrmappl.c  Mrmcontext.c  Mrmerror.c  Mrmhier.c  Mrmicon.c  Mrminit.c  Mrmlread.c  Mrmlwrite.c  Mrmmodule.c  Mrmos.c  MrmosI.h  Mrmptrlist.c  Mrmtable.c  Mrmtime.c  Mrmvm.c  Mrmwci.c  Mrmwcrw.c  Mrmwcrwr.c  Mrmwread.c  (+3 more)
lib/Xm/: AccColorT.h  AccTextT.h  ActivatableT.h  ArrowB.c  ArrowB.h  ArrowBG.c  ArrowBG.h  ArrowBGP.h  ArrowBP.h  AtomMgr.c  AtomMgr.h  BBUtil.c  BaseClass.c  BaseClassI.h  BaseClassP.h  BitmapsI.h  BulletinB.c  BulletinB.h  (+493 more)
m4/: ax_cflags.m4
tests/: Cursor.c  Jpeg.c  Makefile.am  Png.c  Svg.c  XmChar.c  XmDesktopObject.c  XmFontList.c  XmFontListEntry.c  XmScreen.c  XmString.c  XmTextF.c  runner.c  suites.h
tests/xmstring/: serialized  text
tools/wml/: Makefile.am  Uil.y  UilDBDef.h  UilLexPars.y  motif.wml  wml.c  wml.h  wmldbcreate.c  wmllex.l  wmlnoreturn.h  wmlouth.c  wmloutkey.c  wmloutmm.c  wmloutp1.c  wmlparse.y  wmlresolve.c  wmlsynbld.c  wmluiltok.l  wmlutils.c
(+289 files in other folders)
