datadir = ${prefix}/share/Xm/doc

EXTRA_DIST = COPYING README RELEASE RELNOTES

MAINTAINERCLEANFILES = Makefile.in \
             configure libtool \
             config.guess \
             config.sub \
             config.log \
             ltconfig ltmain.sh \
             aclocal.m4 \
             config.h.in \
             install-sh \
             missing mkinstalldirs \
             compile

SUBDIRS	= bindings bitmaps localized lib include tools clients doc demos
ACLOCAL_AMFLAGS = -I m4

